<resources>
    <string name="app_name">Heroes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heroes_music">Heroes Music</string>
    <string name="artist">Artist</string>
    <string name="music">Music</string>
    <string name="album">Album</string>
    <string name="search">Search</string>
    <string name="see_more">See more ...</string>
    <string name="favorite">Favorite</string>
    <string name="finish_and_save">finish and save</string>
    <string name="enter">Enter</string>
    <string name="type_lyric">Type lyric</string>
    <string name="start_time">Start time :</string>
</resources>