<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/music"
        android:icon="@drawable/ic_icon_music"
        android:title="@string/music"
        android:fontFamily="@font/avenir_next_medium"
        app:showAsAction="always"/>

    <item
        android:id="@+id/singer"
        android:icon="@drawable/ic_icon_singer"
        android:title="@string/artist"
        android:fontFamily="@font/avenir_next_medium"
        app:showAsAction="always"/>

    <item
        android:id="@+id/album"
        android:icon="@drawable/ic_icon_album"
        android:title="@string/album"
        android:fontFamily="@font/avenir_next_medium"
        app:showAsAction="always"/>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_icon_search"
        android:title="@string/search"
        android:fontFamily="@font/avenir_next_medium"
        app:showAsAction="always"/>

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/favorite"
        android:fontFamily="@font/avenir_next_medium"
        app:showAsAction="always"/>

</menu>