<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LyricEntryFragment">

    <ImageView
        android:id="@+id/lyric_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/ic_play_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyric_edit_text" />

    <SeekBar
        android:id="@+id/lyric_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/primaryTextColor"
        android:backgroundTintMode="src_over"
        android:foregroundTint="@color/primaryTextColor"
        android:indeterminateTint="@color/primaryTextColor"
        android:progressBackgroundTint="@color/primaryTextColor"
        android:progressTint="@color/primaryTextColor"
        android:secondaryProgressTint="@color/primaryTextColor"
        android:thumbTint="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/lyric_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lyric_play"
        app:tickMarkTint="@color/primaryLightColor" />

    <EditText
        android:id="@+id/lyric_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/type_lyric"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/primaryLightColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lyric_enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_button"
        android:text="@string/enter"
        app:layout_constraintBottom_toTopOf="@+id/lyric_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyric_start_time_record" />

    <Button
        android:id="@+id/lyric_save_button"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/circle_button"
        android:text="@string/finish_and_save"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/lyric_delete"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle_button"
        android:text="delete lyric"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/lyric_save_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lyric_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/lyric_seekBar"
        app:layout_constraintTop_toBottomOf="@+id/lyric_seekBar"
        tools:text="00:34" />

    <Button
        android:id="@+id/lyric_start_time_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Record start time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyric_seekBar" />

    <TextView
        android:id="@+id/lyric_start_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/start_time"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/lyric_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/lyric_edit_text" />
</androidx.constraintlayout.widget.ConstraintLayout>